Updated structure and layout

--- a/src/containers/SmartContract/SmartContract.css
+++ b/src/containers/SmartContract/SmartContract.css
@@ -9,6 +9,12 @@
 
 .marginLeft {
     margin-left: 15% !important;
+    margin-right: 15% !important;
+}
+
+.smartcontract-action-button{
+    display: flex;
+    padding: 5px;
 }
 
 .tableText {
