--- a/src/components/GameRenderer/GameRenderer.css
+++ b/src/components/GameRenderer/GameRenderer.css
@@ -1,3 +1,12 @@
 .gamerenderer-button {
     margin-left: 5%
 }
+
+.gamerenderer-actions {
+    display: flex; 
+    width: 100%;
+}
+
+.gamerenderer-spacer { 
+    width: 70%;
+}
