--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -3,7 +3,7 @@
 	padding: 0;
 	width: 200px;
 	background-color: #f1f1f1;
-	height: 100%;
+	height: 80%;
 	overflow: auto;
 }
 
@@ -18,6 +18,11 @@
 	color: black;
 	padding: 16px;
 	text-decoration: none;
+	/* border: 3px solid #cfcece;
+  background-color: #ffffff; */
+  border-radius: 15px 15px 15px 15px;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
 }
 
 .menubutton.active {
@@ -26,6 +31,6 @@
 }
 
 .menubutton:hover:not(.active) {
-  background-color: #555;
+  background-color: #2980b9;
   color: white;
 }
